5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4004/executions/1573_2896.log
== TEST (2019-03-13 13:54:25) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = nilderson

# Impressao de saidas
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = nilderson
NameError: name 'nilderson' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:55:01) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = Elaine Harada

# Impressao de saidas
print(var)
-- ERROR:
File "XXXX", line 4
    var = Elaine Harada
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:55:33) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input(Elaine Harada)

# Impressao de saidas
print(var)
-- ERROR:
File "XXXX", line 4
    var = input(Elaine Harada)
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:55:44) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Elaine Harada")

# Impressao de saidas
print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:55:47) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Elaine Harada")

# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.148963
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
